# ptcMod

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  ptCollage_0.9.2.5.CT  ptCollage_0.9.4.54.CT  rust-toolchain.toml
.github/workflows/: rust.yml
src/: build.rs  inject.rs  lib.rs  main.rs  patch.rs  runtime.rs  winutil.rs
src/feature/: custom_note_rendering.rs  custom_scroll.rs  drag_and_drop.rs  fps_display_fix.rs  fps_unlock.rs  mod.rs  playhead.rs  scroll.rs  scroll_hook.rs  scroll_mod.rs  volume_muliply.rs
src/ptc/: events.rs  mod.rs  v0925.rs  v09454.rs
src/ptc/drawing/: color.rs  ddraw.rs  mod.rs
