[package]
name = "ptc-mod"
version = "0.1.0"
edition = "2021"

[dependencies]
process-memory = "0.4"
sysinfo = { version = "0.23", default-features = false }
winapi = { version = "0.3", features = ["std", "everything"] }
libc = { version = "0.2", features = ["use_std", "extra_traits"] }
log = "0.4"
simplelog = "0.11"
anyhow = "1.0"
colorsys = "0.6"

[lib]
name = "ptc_mod"
crate-type = ["dylib"] # dll