[package]
name = "ptc-mod"
description = "Mod for ptCollage"
version = "0.1.0"
repository = "https://github.com/PieKing1215/ptcMod"
authors = ["PieKing1215"]
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2021"
build = "src/build.rs"

[dependencies]
process-memory = "0.4"
sysinfo = { version = "0.23", default-features = false }
winapi = { version = "0.3", features = ["std", "handleapi", "libloaderapi", "memoryapi", "processthreadsapi", "winuser", "wincon", "synchapi", "winver", "ole2", "ddraw", "d2d1", "d3d9"] }
libc = { version = "0.2", features = ["use_std", "extra_traits"] }
log = "0.4"
simplelog = "0.12"
anyhow = "1.0"
colorsys = "0.6"
path-absolutize = "3.0" # so we can get absolute paths to missing files
lazy_static = "1.4"
regex = "1.5"
reqwest = { version = "0.11", features = ["blocking"] }
widestring = "0.5"

[lib]
name = "ptc_mod"
crate-type = ["cdylib"] # dll